Build/third-party-libraries/packages/nuget.org/system.collections.specialized/4.0.1/readme.md
System.Collections.Specialized [4.0.1](https://www.nuget.org/packages/System.Collections.Specialized/4.0.1)
--------------------

Used by: AspNetCoreNSwag

Target frameworks: net5.0, net6.0, net7.0, netcoreapp3.0

License: [ms-net-library](../../../../licenses/ms-net-library) 

- package license: [ms-net-library](http://go.microsoft.com/fwlink/?LinkId=329770) 
- project license: [Unknown](https://dot.net/) , License should be verified on https://dot.net/

Description
-----------
Provides older specialized non-generic collections; for example, a linked list dictionary, a bit vector, and collections that contain only strings.

Commonly Used Types:
System.Collections.Specialized.NameValueCollection
System.Collections.Specialized.NameObjectCollectionBase
System.Collections.Specialized.StringCollection
System.Collections.Specialized.IOrderedDictionary
System.Collections.Specialized.HybridDictionary
System.Collections.Specialized.OrderedDictionary
System.Collections.Specialized.ListDictionary
System.Collections.Specialized.StringDictionary
System.Collections.Specialized.BitVector32
 
When using NuGet 3.x this package requires at least version 3.4.

Remarks
-----------
no remarks


Dependencies 2
-----------

|Name|Version|
|----------|:----|
|[System.Collections.NonGeneric](../../../../packages/nuget.org/system.collections.nongeneric/4.0.1)|4.0.1|
|[System.Threading](../../../../packages/nuget.org/system.threading/4.0.11)|4.0.11|

*This page was generated by a tool.*